--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,34 @@
 * {
+    padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    
+}
+body{
     font-family: Oswald;
+}
+/* -----------Common styles--------- */
+.container{
+    width: 80%;
+    margin: 0 auto;
+}
+img{
+    max-width: 100%;
+}
+.btn-primary{
+    color: #ffff;
+    background-color: grey;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 550;
+    padding: 12px 14px;
+    margin: 20px auto;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.btn-primary:hover{
+    color: red;
 }
 
 /* -----------header styles--------- */
@@ -32,10 +60,6 @@ nav li {
 
 }
 
-nav li a:hover {
-    color: orangered;
-}
-
 nav li a {
     color: gold;
     font-size: 20px;
@@ -44,44 +68,47 @@ nav li a {
     padding: 35px;
 }
 
+nav li a:hover {
+    color: orangered;
+}
+
+
 /* -------------banner area styles--------- */
 .banner {
-    margin: 20px 200px 0px 50px;
+    width: 70%;
+    padding: 20px;
 }
 
 .banner-title {
     color: gold;
     font-size: 25px;
     font-weight: 600;
-    padding-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .banner-description {
     color: #ffff;
     font-size: 15px;
     font-weight: 500;
-    padding: 10px 350px 60px 50px;
+    padding: 20px 10px;
 }
 /* ----------blog area styles--------- */
 .blogs{
     background-color: bisque;
-    padding: 60px;
-    margin-bottom: 40px;
-    
 }
 .blogs-title{
     color: orangered;
     font-size: 30px;
     font-weight: 700;
     text-align: center;
-    padding-bottom: 35px;
+    padding: 20px;
 }
 .blogs-container{
     display: flex;
-    gap: 30px;
+    gap: 40px;
 }
 .blogs-contain{
-    padding: 10px 50px 10px 60px;
+    padding: 20px 0px;
 
 }
 .contain-title{
@@ -96,19 +123,20 @@ nav li a {
     background-color: #646464;
     font-size: 15px;
     font-weight: 450;
-    padding: 15px 25px 15px 25px;
+    padding: 15px 20px;
+    border-radius: 5px;
+
 }
 
 /* ---------blogs posts area styles-------- */
 .blogs-posts{
     text-align: center;
-    margin-top: 20px;
+    margin: 30px auto;
 
 }
 .posts-container{
     display: flex;
     gap: 25px;
-    margin: 40px 50px 50px 50px;
 }
 .posts-contain{
     background: #ffffff;
@@ -122,48 +150,46 @@ nav li a {
     font-weight: 450;
     padding: 10px 10px;
 }
-.read{
-    color: orangered;
-    background-color: #ffffff;
-    font-size: 20px;
-    font-weight: 100;
-    padding: 5px 5px;
-    margin-bottom: 20px;
-    border: none;
-    cursor: pointer;
-}
+
 .posts-contain img{
     width: 450px;
     height: 400px;
     padding-bottom: 10px;
 }
-.learn-more{
-    color: black;
-    background-color: #ffffff;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 15px;
-    margin-bottom: 50px;
-    border: 2px solid black;
-    cursor: pointer;
-}
+
 /* ---------------footer section styles-------- */
 .footer-section{
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.40) 120%) #989898;
     background-blend-mode: multiply, multiply;
 }
-.margin-line hr{
-    color: #898989;
+.margin-line{
+    background: rgb(255, 255, 255);
 }
 .copyright-container{
-    text-align: center;
-    height: 30px;
     padding: 20px;
-    margin: 0px 100px 0px 100px;
+   
 }
 .copyright{
-    color: rgb(255, 255, 255);
+    color: yellow;
     font-size: 12px;
-    font-weight: 200;
+    font-weight: 400;
+    text-align: center;
     padding-top: 15px;
 }
+
+/* ---------------media query styles-------- */
+
+/* ---------------Mobile devices-------- */
+@media only screen and (max-width: 688px) {
+    .container, .banner{
+        width: 100%;
+        padding: 15px;
+        margin: 0 auto;
+    }
+    nav, nav ul, .blogs-container, .posts-container{
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+}
+/* ---------------end styles-------- */
